# Agentic-QA

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMMANDS.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  pytest_out.txt
.atomcode/: mcp.json  settings.json  setup-state.json
.codex/: config.toml
.github/: pull_request_template.md
_codex_tasks/: 000-task-index.md  001-bootstrap-final-workspace.md  002-align-core-files.md  003-enhance-content-and-sample-flow.md  004-polish-report-and-codex-output.md  005-standardize-codex-completion-summary.md  006-add-lightweight-doc-consistency-check.md  007-add-github-actions-validation.md  007-add-langgraph-runtime-roadmap-and-skeleton.md  007-align-production-agent-runtime-roadmap.md  008-fix-runtime-roadmap-review-issues.md  009-bootstrap-langgraph-runtime-skeleton.md  010-integrate-langgraph-stategraph.md  011-add-runtime-checkpoint-and-run-records.md  012-mvp-requirement-analysis-and-testcase-generation.md  012A-review-grade-output-quality.md  012B-fix-review-grade-quality-gates.md  013-add-markitdown-requirement-normalization.md  014-enforce-quality-gates-and-markitdown.md  015-add-prototype-notes-two-stage-requirement-input.md  016-adjust-prototype-image-ignore-policy.md  017-formalize-llm-timeout-and-provider-stability.md  018-fix-real-demand-llm-generation-failure.md  019-generate-review-artifacts-with-codex-no-runtime-llm.md  020-align-codex-first-workflow-and-review-status.md  mvp_AI_Agentic_QA_项目完整方案.md
actions/: __init__.py  analyze_pytest_result.py  analyze_requirement.py  automation_standards.py  case_binding.py  execute_test_workflow.py  generate_test_cases.py  generate_test_script.py  requirement_parser.py  run_pytest.py  search_logs.py  test_model_builder.py
agents/: README.md  api-test-generation-agent.md  archive-agent.md  bug-draft-agent.md  failure-analysis-agent.md  rag-automation-case-agent.md  report-generation-agent.md  requirement-analysis-agent.md  test-execution-agent.md  testcase-design-agent.md  ui-test-generation-agent.md
apps/: README.md  __init__.py
configs/: README.md  config.example.yaml  model.example.yaml
docs/: agent-integration.md  api-discovery.md  api-test-generation.md  architecture.md  artifact-standards.md  artifact-versioning.md  automation-case-generation.md  cli-reference.md  codex-local-sync.md  configuration.md  failure-triage.md  getting-started.md  harness-contracts.md  index.md  production-agent-runtime-roadmap.md  prompt-engineering.md  qa-report-generation.md  rag-architecture.md  rag-design.md  rag-run-record-spec.md  review-gate.md  roadmap.md  runtime-reliability.md  test-execution.md  testcase-standards.md  ui-test-generation.md  workflow-dsl.md
flows/: log_analysis.yaml  requirement.yaml  requirement_analysis.yaml  result_analysis.yaml  script_generation.yaml  test_case.yaml  test_case_generation.yaml  test_execution.yaml  test_workflow_execution.yaml
integrations/: __init__.py
knowledge/: README.md
persona/: test_assistant.md
prd/: _registry.yml
prompts/: README.md  api-discovery.md  api-test-generation-prompt.md  api-test-generation.md  archive-prompt.md  bug-draft-prompt.md  failure-analysis-prompt.md  rag-automation-case-prompt.md  report-generation-prompt.md  requirement-analysis-prompt.md  runtime-testcase-generation-prompt.md  semantic-router-prompt.md  test-execution-prompt.md  testcase-design-prompt.md  ui-test-generation-prompt.md  (+1 more)
(+728 files in other folders)
