[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-qa"
version = "0.1.0"
description = "Command-routed human-in-the-loop Agentic QA workspace."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2",
  "markitdown[all]>=0.1",
  "openai>=1.0",
  "pydantic>=2",
  "pytest>=8",
  "pytest-json-report>=1.5",
  "python-dotenv>=1",
  "typer>=0.12",
  "rich>=13",
  "pyyaml>=6",
  "ruff>=0.8",
  "faiss-cpu>=1.8",
  "lark-oapi>=1.2",
  "numpy>=1.24",
]

[project.scripts]
agentic-qa = "runtime.cli:main"

[tool.setuptools.packages.find]
include = ["apps*", "rag*", "runtime*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".agents/skills-disabled"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
