[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-qa"
version = "0.1.0"
description = "Test-domain supervisor and expert-agent harness with a hard human review gate."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=1.0,<2",
  "mcp>=1.0,<2",
  "numpy>=1.24,<3",
  "openai>=1.0,<3",
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "requests>=2,<3",
  "rich>=13,<16",
]

[project.optional-dependencies]
postgres = [
  "langgraph-checkpoint-postgres>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
]
rag = [
  "faiss-cpu>=1.8,<2",
]
documents = [
  "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1,<0.2",
]
feishu = [
  "lark-oapi>=1.2,<2",
]
full = [
  "faiss-cpu>=1.8,<2",
  "langgraph-checkpoint-postgres>=3.1,<4",
  "lark-oapi>=1.2,<2",
  "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1,<0.2",
  "psycopg[binary]>=3.2,<4",
]
dev = [
  "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1,<0.2",
  "pytest>=8,<10",
  "pytest-json-report>=1.5,<2",
  "ruff>=0.8,<1",
]

[project.scripts]
agentic-qa = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["harness*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
harness = ["manifests/**/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".agents/skills-disabled"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
