[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-qa"
version = "0.1.0"
description = "Test-domain supervisor and expert-agent harness with a hard human review gate."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anyio>=4,<5",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-postgres>=3.1,<4",
  "jsonschema>=4,<5",
  "mcp>=1.0,<2",
  "openai>=1.0,<3",
  "pydantic>=2,<3",
  "psycopg[binary]>=3.2,<4",
  "pyyaml>=6,<7",
  "requests>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-json-report>=1.5,<2",
  "ruff>=0.8,<1",
]
docs = [
  "mkdocs-material>=9,<10",
]

[project.scripts]
agentic-qa = "harness.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["harness*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
harness = ["manifests/**/*.yml", "knowledge/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
